# ChangeLog for app-misc/zisofs-tools
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/zisofs-tools/ChangeLog,v 1.21 2006/11/25 19:02:40 masterdriverz Exp $

  25 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> metadata.xml:
  Kernel's got this one...

  19 Jul 2005; Kito <kito@gentoo.org> zisofs-tools-1.0.6.ebuild:
  ~ppc-macos keyword

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*zisofs-tools-1.0.6 (27 Oct 2004)

  27 Oct 2004; Mike Frysinger <vapier@gentoo.org>
  +zisofs-tools-1.0.6.ebuild:
  Version bump for Joseph Cheek.

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  zisofs-tools-1.0.3.ebuild, zisofs-tools-1.0.4.ebuild:
  Masked zisofs-tools-1.0.4.ebuild stable for ppc

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  zisofs-tools-1.0.3.ebuild:
  Masked zisofs-tools-1.0.3.ebuild stable for ppc

  18 Jul 2004; Tom Gall <tgall@gentoo.org> zisofs-tools-1.0.4-r1.ebuild:
  marked stable for ppc64 livecd use, bug #57487

  16 Jul 2004; Guy Martin <gmsoft@gentoo.org> zisofs-tools-1.0.4-r1.ebuild:
  Marked stable on hppa.

  20 Jun 2004; <pyrania@gentoo.org> zisofs-tools-1.0.3.ebuild,
  zisofs-tools-1.0.4.ebuild:
  Added IUSE.

  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> zisofs-tools-1.0.3.ebuild,
  zisofs-tools-1.0.4-r1.ebuild, zisofs-tools-1.0.4.ebuild:
  Stable on alpha.

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> zisofs-tools-1.0.3.ebuild,
  zisofs-tools-1.0.4.ebuild:
  Add die following econf for bug 48950

  17 Apr 2004; Bryan Østergaard <kloeri@gentoo.org>
  zisofs-tools-1.0.4-r1.ebuild:
  Add ~alpha to keywords.

  05 Feb 2004; <gustavoz@gentoo.org> zisofs-tools-1.0.4-r1.ebuild:
  marked stable on sparc

  23 Jan 2004; <gustavoz@gentoo.org> zisofs-tools-1.0.4-r1.ebuild:
  keyworded ~sparc for catalyst

  25 May 2003; Martin Holzer <mholzer@gentoo.org> zisofs-tools-1.0.3.ebuild,