@@ -1,17 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST zisofs-tools-1.0.4.tar.bz2 40951
 DIST zisofs-tools-1.0.6.tar.bz2 53138
 EBUILD zisofs-tools-1.0.4-r1.ebuild 733 RMD160 d38cafa477c070004884aa95fb4e91320c7258df SHA1 5b46f6dc1dd2c206f029eecb4bbc4ebea30a4fe8 SHA256 da25385af4ee2b6fe304cf9264afeb225b700109bc5f3a55baf36c5dab7dc0ad
 MD5 51722fef1496cb52c43ce88e5f92b05a zisofs-tools-1.0.4-r1.ebuild 733
 RMD160 d38cafa477c070004884aa95fb4e91320c7258df zisofs-tools-1.0.4-r1.ebuild 733
 SHA256 da25385af4ee2b6fe304cf9264afeb225b700109bc5f3a55baf36c5dab7dc0ad zisofs-tools-1.0.4-r1.ebuild 733
-EBUILD zisofs-tools-1.0.6.ebuild 752 RMD160 921b9c3a3cca8dcdfdb168ff599ed80100dfb631 SHA1 32bbb5322f7cc03cf4e92bd437623fc553631c37 SHA256 ba7e7028592f3a1f275a7d27e8403060d05b051fc52158feb00604a55db68b4b
-MD5 134b7a6565da75a382b4d46d838ce5c3 zisofs-tools-1.0.6.ebuild 752
-RMD160 921b9c3a3cca8dcdfdb168ff599ed80100dfb631 zisofs-tools-1.0.6.ebuild 752
-SHA256 ba7e7028592f3a1f275a7d27e8403060d05b051fc52158feb00604a55db68b4b zisofs-tools-1.0.6.ebuild 752
-MISC ChangeLog 2678 RMD160 9a2d112f8a95e5f9828f606a2c1c2378c91a0695 SHA1 88d96cd65aa66df7e54db0d5f6d59f5d15b4cc95 SHA256 525d4ede49706e5ad3b8e9d572d7277c81f0440ff977487b4322ac071ab90852
-MD5 c79fcfda6017dc99227e828c1e669a96 ChangeLog 2678
-RMD160 9a2d112f8a95e5f9828f606a2c1c2378c91a0695 ChangeLog 2678
-SHA256 525d4ede49706e5ad3b8e9d572d7277c81f0440ff977487b4322ac071ab90852 ChangeLog 2678
+EBUILD zisofs-tools-1.0.6.ebuild 753 RMD160 8a7cf83b5a3c02ab69effbc10431c2a436771f49 SHA1 cc507ec46dde8f00600b87a47441e00c6b01ff44 SHA256 b16fdb738e15d034cd91f6f53dc48b4e5ef0bf9f6b89a6257cd737c45452e6fb
+MD5 155cbe77c6a4938f30e61f163ec8ab1f zisofs-tools-1.0.6.ebuild 753
+RMD160 8a7cf83b5a3c02ab69effbc10431c2a436771f49 zisofs-tools-1.0.6.ebuild 753
+SHA256 b16fdb738e15d034cd91f6f53dc48b4e5ef0bf9f6b89a6257cd737c45452e6fb zisofs-tools-1.0.6.ebuild 753
+MISC ChangeLog 2775 RMD160 c23a6368bc547b939d756545be80e8ba1849586a SHA1 f247f7aed473c151ae343b3e87b1014495ad63ad SHA256 0645f9fc5a596f6a9b39369fc5239d495a0f2a1f0657148cbf9e4e67e9dc299c
+MD5 a1d4e2d96927111aeaa5c090aea5170e ChangeLog 2775
+RMD160 c23a6368bc547b939d756545be80e8ba1849586a ChangeLog 2775
+SHA256 0645f9fc5a596f6a9b39369fc5239d495a0f2a1f0657148cbf9e4e67e9dc299c ChangeLog 2775
 MISC metadata.xml 159 RMD160 3761efa1d7ce37d50d8dfa6cd56519e718c4102c SHA1 6482d1baca65bc5a38e7e0b6275d8c793e0c5462 SHA256 f81d0167d39a6202286b4a0a9a362159ac63bfbc1c1f71b613b5f29c392651cb
 MD5 a76f13cb946fc2720c04b189616da2de metadata.xml 159
 RMD160 3761efa1d7ce37d50d8dfa6cd56519e718c4102c metadata.xml 159
@@ -22,3 +25,10 @@ SHA256 d3d44dbe03d5659020b14c81a698d487ff9e57ddde74f647e0effd0060d95458 files/di
 MD5 f6a64dc4d04cf4ef74e7b4c385bf60c3 files/digest-zisofs-tools-1.0.6 70
 RMD160 2c2a01f6d7a7bec2e85acd75e721193097aa0e25 files/digest-zisofs-tools-1.0.6 70
 SHA256 7740406464e286594a283dee2500b8f51c9435b1e4dff8d3aa1163692044a049 files/digest-zisofs-tools-1.0.6 70
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.6-ecc01.6 (GNU/Linux)
+
+iD8DBQFFtiVvKRy60XGEcJIRAin+AKCJmH6o8mO0R6eRHc1YFphYJWtCjwCggGQL
+wAb1kO7PBneA1jX9akerCAk=
+=YcUy
+-----END PGP SIGNATURE-----
