@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/zisofs-tools
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/zisofs-tools/ChangeLog,v 1.21 2006/11/25 19:02:40 masterdriverz Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/zisofs-tools/ChangeLog,v 1.22 2007/01/23 15:10:32 gustavoz Exp $
+
+  23 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  zisofs-tools-1.0.6.ebuild:
+  Stable on sparc
 
   25 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> metadata.xml:
   Kernel's got this one...
